--- a/NoSQLTest/src/main/resources/application.properties
+++ b/NoSQLTest/src/main/resources/application.properties
@@ -5,4 +5,6 @@ server.servlet.context-path=/
 # MongoDB 설정
 spring.data.mongodb.uri=mongodb://hyeon:1234@localhost:27017/hyeon
 
-
+# Redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
